--- a/src/Components/Commons/Loader/LoaderLayout.module.css
+++ b/src/Components/Commons/Loader/LoaderLayout.module.css
@@ -1,7 +1,17 @@
 .loader {
-  display: flex;
+  /*display: flex;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 20px;*/
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1500;
+  display: flex;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255,255,255,0)
 }
 .ldsDualRing {
   display: inline-block;
